# rects

./: .gitignore  LICENSE  README.md  pyproject.toml
rects/: __init__.py  band.py  data_structures.py  merge.py  region.py
src/rects/: __init__.py  region.py
tests/: test_band_init.py  test_region_intersection.py  test_region_subtraction.py  test_region_union.py  test_region_xor.py
